# WebEngine

./: .gitmodules  Engine.sln  GenericEngine.sln  LICENSE  README.md  Tuples.hpp
Common/: Simd.hpp  Strings.hpp  Tuples.hpp
Core/: CMakeLists.txt  CMakePresets.json  Core.sln  Replace.ps1
Core/Common/: .gitignore  CMakeLists.txt  Common.vcxproj  Common.vcxproj.filters  IntrusivePtr.hpp  NameString.hpp  ObservableSequentialCollection.hpp  ObservableVector.hpp  Owned.hpp  OwnedPtr.hpp  PathString.hpp  RefCounted.hpp  Simd.hpp  Strings.hpp  Tuples.hpp  UnorderedVector.hpp
Core/Common/Simd/: AvxIntrinsics.hpp  Float4.hpp  Intrinsics.hpp  Simd.hpp  SseIntrinsics.hpp
Core/Common/Tuples/: Tuple2.hpp  Tuple3.hpp  Tuple4.hpp  Tuples.hpp
Core/Filesystem/: .gitignore  CMakeLists.txt  Endianness.hpp  Filesystem.hpp  Filesystem.vcxproj  Filesystem.vcxproj.filters  Path.hpp
Core/Filesystem/Scripts/: ReplaceStrings.ps1
Core/Graphics/: AppearanceFlags.hpp  AppearanceOptions.hpp  AttributeMask.hpp  BlendEquation.hpp  BlendFunction.hpp  CMakeLists.txt  ClearOptions.hpp  ClipOrigin.hpp  ColorFormat.hpp  ComparisonFunction.hpp  ComponentVector.hpp  CullFaceMode.hpp  DepthMask.hpp  DepthRange.hpp  DepthStencilFormat.hpp  FramebufferAccessMode.hpp  FramebufferAttributes.hpp  FramebufferOptions.hpp  FrontFace.hpp  GeometryAttributes.hpp  GeometryType.hpp  Graphics.hpp  Graphics.vcxproj  Graphics.vcxproj.filters  Hash.inl  LightType.hpp  LightTypes.hpp  MultisampleMode.hpp  PolygonFillMode.hpp  PrimitiveTopology.hpp  PrimitiveType.hpp  Projection.hpp  RasterizerFlags.hpp  RasterizerState.hpp  ResourceTypes.hpp  SamplerState.cpp  SamplerState.hpp  Sidedness.hpp  SkinningFlags.hpp  StencilOperation.hpp  (+13 more)
Core/Imaging/: ChannelOrder.hpp  Color3.hpp  Color4.hpp  ColorMask.hpp  ColorSpace.hpp  ColorSpaces.hpp  ImageFormat.hpp  Imaging.hpp  Imaging.vcxproj  Imaging.vcxproj.filters  Pixel.inl  PixelFormat.hpp  PixelTypes.hpp
Core/Mathematics/: AffineTransform.hpp  Axis.hpp  Constants.hpp  Euler.hpp  EulerOrder.hpp  HalfSpace.hpp  IntVector2.hpp  IntVector3.hpp  IntVector4.hpp  Line2.hpp  Line3.hpp  Mathematics.hpp  Mathematics.vcxproj  Matrix2.hpp  Matrix3.hpp  Matrix4.hpp  Plane.hpp  Quaternion.hpp  Ray2.hpp  Ray3.hpp  Scalar.hpp  Segment2.hpp  Segment3.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp  YawPitchRoll.hpp
Core/Physics/: Physics.hpp  Physics.vcxproj  Physics.vcxproj.filters
Foundation/: Foundation.csproj
Foundation/Mathematics/: AffineTransform.cs  AffineTransformConverter.cs  Axes.cs  Axis.cs  AxisAlignedBox.cs  AxisAlignedBoxConverter.cs  AxisAlignedRectangle.cs  AxisAlignedRectangleConverter.cs  Capsule.cs  Circle2.cs  Cone.cs  Containment.cs  Cylinder.cs  DegreeConverter.cs  Distances.cs  DoubleConstants.cs  DoubleConverter.cs  Ellipsoid.cs  Euler.cs  EulerConverter.cs  EulerOrder.cs  Half.cs  HalfSpace.cs  HalfSpaceConverter.cs  IntVector2.cs  IntVector2Converter.cs  IntVector3.cs  IntVector3Converter.cs  IntVector4.cs  IntVector4Converter.cs  Intersections.cs  Interval.cs  IntervalConverter.cs  Line2.cs  Line3.cs  Matrix2.cs  Matrix2Converter.cs  Matrix3.cs  Matrix3Converter.cs  Matrix4.cs  (+32 more)
Mathematics/: Mathematics.hpp  Vector3.hpp
